# RealNote

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CategorizedListModel.cpp  CategorizedListModel.h  Commands.cpp  Commands.hpp  FilesUtils.cpp  MainController.cpp  MainController.h  MainController.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  MainWindow.ui  NoteModel.cpp  NoteModel.h  NoteModel.hpp  NotesContainer.cpp  NotesContainer.h  README.md  RealNote.pro  Style.qrc  Themes.cpp  Themes.hpp  TreeView.cpp  TreeView.h  main.cpp
Model/: ApplicationContext.cpp  ApplicationContext.hpp  CategorizedListModel.cpp  CategorizedListModel.hpp  Global.hpp  NoteModel.cpp  NoteModel.hpp  NotesContainer.cpp  NotesContainer.hpp
Res/: Resources.qrc
Style/: Style.qrc
View/: FeaturedTextEdit.cpp  FeaturedTextEdit.h  MainView.cpp  MainView.hpp  MainWindow.cpp  MainWindow.hpp  QtUtils.hpp  TextEditor.hpp
res/icons/: README.txt
src/: Commands.cpp  FilesUtils.cpp  FilesUtils.hpp  MainController.hpp  Themes.cpp
src/Model/: ApplicationContext.hpp  CategorizedListModel.cpp  NoteModel.hpp  NotesContainer.hpp
src/View/: MainMenu.cpp  MainMenu.hpp  MainView.cpp  MainView.hpp  QtUtils.hpp  TextEditor.hpp
